# thoth-github-action

./: .pre-commit-config.yaml  .thoth.yaml  CHANGELOG.md  OWNERS  OWNERS_ALIASES  Pipfile  README.md  action.py  action.yaml  pyproject.toml  setup_cfg_to_requirements_txt.py  verify_cve.py
.github/workflows/: action.yaml  test-action.yaml  thamos_advise.yaml
actions/: get_advise.py  ubuntu_config_template.yaml
helpers/: patch_commit_sha_test.sh
templates/: ubuntu_config_template.yaml
tests/test-pip-cve/: requirements.txt
tests/test-pip-no-cve/: requirements.txt
tests/test-pipenv-cve/: Pipfile
tests/test-pipenv-no-cve/: Pipfile
tests/test-setupcfg-cve/: setup.cfg
tests/test-setupcfg-no-cve/: setup.cfg
thoth/thoth-github-action/: __init__.py
thoth/thoth_github_action/: __init__.py
