[project]
name = "thoth-github-action"
description = "Thoth Adviser GitHub Action"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
