[metadata]
name = test-setupcfg
description = A test setup.cfg file
author = Red Hat
license = MIT

[options]
packages = find:
install_requires =
    GitPython
    PyYAML
    click
    lazy_object_proxy
    marshmallow
    marshmallow-enum
    munch
    ogr
    packaging
    python-gnupg
    requests
    setuptools
    tabulate
    koji
    cachetools
python_requires = >=3.8
include_package_data = True

[options.extras_require]
testing =
    pytest
    flexmock

[options.packages.find]
exclude =
    tests*
